--- a/templates/BitbucketDataCenter.template
+++ b/templates/BitbucketDataCenter.template
@@ -792,6 +792,23 @@ Resources:
       Tags:
         - Key: Cluster
           Value: !Ref "AWS::StackName"
+  ElasticsearchBucketPolicy:
+    Type: "AWS::S3::BucketPolicy"
+    Condition: CreateESBucket
+    Properties:
+      Bucket: !Ref ElasticsearchBucket
+      PolicyDocument:
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              AWS: !GetAtt BitbucketFileServerRole.Arn
+            Action: ["s3:*"]
+            Resource: !Sub ["arn:aws:s3:::${BucketName}/*", BucketName: !Ref ElasticsearchBucket]
+          - Effect: "Allow"
+            Principal:
+              AWS: !GetAtt BitbucketFileServerRole.Arn
+            Action: ["s3:*"]
+            Resource: !Sub ["arn:aws:s3:::${BucketName}", BucketName: !Ref ElasticsearchBucket]
   FileServer:
     Type: "AWS::EC2::Instance"
     Metadata:
