--- a/templates/BitbucketDataCenter.template
+++ b/templates/BitbucketDataCenter.template
@@ -68,6 +68,8 @@ Metadata:
         default: Minimum number of cluster nodes
       ClusterNodeInstanceType:
         default: Bitbucket cluster node instance type
+      CreateBucket:
+        default: Create S3 bucket for Elasticsearch snapshots
       DBInstanceClass:
         default: RDS instance class
       DBMasterUserPassword:
@@ -173,6 +175,12 @@ Parameters:
     Description: Java options passed to the JVM that runs Bitbucket.
     Type: String
     Default: ""
+  CreateBucket:
+    Description: Set to true to create the S3 bucket within this stack, must be used in conjunction with ESBucketName
+    Type: String
+    Default: true
+    AllowedValues: [true, false]
+    ConstraintDescription: Must be 'true' or 'false'.
   DBInstanceClass:
     Type: String
     Default: db.m4.large
@@ -353,8 +361,10 @@ Conditions:
       - Condition: ESBucketNameSet
   CreateESBucket:
     !And
-      - !Equals [!Ref ESSnapshotId, ""]
-      - Condition: ESBucketNameSet
+      - !Equals [!Ref CreateBucket, "true"]
+      - !And
+        - !Not [Condition: RestoreFromESSnapshot]
+        - Condition: ESBucketNameSet
   ESBucketNameSet:
     !Not [!Equals [!Ref ESBucketName, ""]]
   StandbyMode:
@@ -793,23 +803,6 @@ Resources:
       Tags:
         - Key: Cluster
           Value: !Ref "AWS::StackName"
-  ElasticsearchBucketPolicy:
-    Type: "AWS::S3::BucketPolicy"
-    Condition: CreateESBucket
-    Properties:
-      Bucket: !Ref ElasticsearchBucket
-      PolicyDocument:
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              AWS: !GetAtt BitbucketFileServerRole.Arn
-            Action: ["s3:*"]
-            Resource: !Sub ["arn:aws:s3:::${BucketName}/*", BucketName: !Ref ElasticsearchBucket]
-          - Effect: "Allow"
-            Principal:
-              AWS: !GetAtt BitbucketFileServerRole.Arn
-            Action: ["s3:*"]
-            Resource: !Sub ["arn:aws:s3:::${BucketName}", BucketName: !Ref ElasticsearchBucket]
   FileServer:
     Type: "AWS::EC2::Instance"
     Metadata:
